[package]
name = "finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
crossterm = "0.25.0"
# lazy_static = "1.4.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tui = "0.19.0"
#strum = "0.24.1"
#strum_macros = "0.24.3"
